src/components/Question/styles.scss
@import "../../sass/breakpoints.scss";

.root {
  margin: auto;
  max-width: 850px;
  padding-top: 1em;

  h2 {
    font-family: ABCSerif, serif;
    font-size: 18px;
    color: black;
  }

  p {
    font-size: 1.125rem;
    line-height: 1.666666667;
    margin-top: 0;
    margin-bottom: 2.25rem;
  }

  .pre {
    text-align: center;
    text-transform: uppercase;
    font-family: ABCSans, sans-serif;
    font-weight: bold;
    margin-bottom: 1em;
    font-size: 14px;
  }

  .choices {
    padding: 8px 0;
    display: flex;
    flex-direction: column;

    @include for-size(tablet-portrait-up) {
      flex-direction: row;
      align-items: center;
      flex-wrap: nowrap;
      justify-content: center;
      align-content: space-between;
    }
  }

  input[type="radio"] {
    position: absolute;
    visibility: hidden;
    display: none;
  }

  label {
    font-family: ABCSans, sans-serif;
    font-size: 12px;
    color: #096180;
    display: block;
    cursor: pointer;
    font-weight: bold;
    padding: 13px 10px 12px;
    text-transform: uppercase;
    border: solid 1px #0081ae;
    border-radius: 0px;
    margin-bottom: 12px;
    text-align: center;

    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Old versions of Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */

    align-items: center;
    justify-content: center;
    border-radius: 3px;
    letter-spacing: 1px;
    background-color: white;
    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.08),
      0px 8px 16px 0px rgba(0, 0, 0, 0.1);

    @include for-size(tablet-portrait-up) {
      margin-left: 4px;
      margin-right: 4px;
      display: flex;
      flex: 1;
      min-height: 60px;
    }

    // @include for-size(desktop-up) {
      
    // }
  }

  // label:last-child {
    // @include for-size(tablet-portrait-up) {
    //   margin-right: 0;
    // }
    // @include for-size(desktop-up) {

  // }

  input[type="radio"]:checked + label {
    color: white;
    
    background-color: #0A749B;
    border: 1px solid #0A749B;

    @include for-size(tablet-portrait-up) {
      background-color: black;
      border-color: black;
    }
  }

  .title {
    text-align: center;
    margin-bottom: 1em;
    @include for-size(tablet-portrait-up) {
      font-size: 24px;
    }
  }

  .dont-know {
    border-color: #737373;
    color: black;
    background-color: #f2f2f2;
    margin-block-start: 8px;

    @include for-size(tablet-portrait-up) {
      margin-top: 0;
      margin-left: 8px;
    }
  }
}

